k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finguide
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - finguide-dev.les13.tech
      secretName: finguide-dev-les13-tls
  rules:
    - host: finguide-dev.les13.tech
      http:
        paths:
          - path: /finguide-api
            pathType: Prefix
            backend:
              service:
                name: finguide-api
                port:
                  name: http
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finguide-web
                port:
                  name: http
